--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,15 +21,65 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  form_field_validator: ^1.0.1
+  dio: ^3.0.9
+  mobx: ^1.0.2+1
+  http: ^0.12.0+4
+  flutter_mobx: ^1.0.1
+  flutter_modular: ^0.5.3
+  progress_dialog: ^1.2.4
+  http_interceptor: ^0.2.0
+  shared_preferences: ^0.5.6+2
+  flutter_swiper: ^1.1.6
+  mask_text_input_formatter: ^1.0.7
+  auto_size_text: ^2.1.0
+  get_ip: 0.4.0
+  intl: ^0.16.1
+  flutter_full_pdf_viewer: ^1.0.6
+  path_provider: 1.6.11
+  sqflite: ^1.3.0
+  cpfcnpj: ^1.0.3
+  flutter_svg: ^0.18.0
+  local_auth: ^0.6.3+2
+  flutter_facebook_login: ^3.0.0
+  firebase_core: ^0.4.4
+  firebase_auth: ^0.16.0
+  google_sign_in: ^4.4.4
+  image_picker: 0.6.6+1
+  camera: 0.5.8+2
+  device_info: ^0.4.2+4
+  firebase_messaging: ^6.0.15
+  uuid: 2.0.4
+  flutter_native_image: ^0.0.5
+  flutter_datetime_picker: 1.4.0
+  flutter_clipboard_manager: ^0.0.2
+  url_launcher: 5.4.10
+  flutter_signature_pad: ^2.0.2
+  badges: ^1.1.1
+  store_redirect: ^1.0.2
+  package_info: ^0.4.1
+  file_picker: ^1.12.0
+  open_file: ^3.0.1
+  cupertino_icons: ^0.1.2
+  table_calendar: ^2.3.0
+  flutter_masked_text: ^0.7.0
+  flutter_exif_rotation: ^0.2.7
+  dotted_border: ^1.0.6
+  native_device_orientation: 0.4.3
+  flare_flutter: ^2.0.5
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  mockito: ^4.1.1
+  mobx_codegen: ^1.0.2
+  build_runner: ^1.8.0
+  flutter_launcher_icons: 0.7.4
   flutter_test:
     sdk: flutter
 
